# crypto-bot

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  instructions.md  main.cpp
include/: Asset.h  FileIo.h  PriceStream.h
include/ds/: TrieSet.h
junk_code/: FloatIntegerConverter.h  TrieSet.h
src/stream/: BinancePriceStream.cpp  WebsocketEndpoint.h
tests/: main.cpp
utils/headers/: Utils.h
